crates/oxc_react_compiler/tests/snapshots/valid-explicit-arguments-annex-b-arrow-local.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/valid-explicit-arguments-annex-b-arrow-local.js
---
const { c: _c } = require("react/compiler-runtime");
// @script
function Component() {
	const $ = _c(1);
	function arguments() {
		return "outer";
	}
	const read = _temp;
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = read();
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
}
function _temp() {
	function arguments_0() {
		return "inner";
	}
	return arguments_0();
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: []
};
