crates/oxc_react_compiler/tests/snapshots/valid-explicit-arguments-annex-b-arrow-redeclared.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/valid-explicit-arguments-annex-b-arrow-redeclared.js
---
// @script
function Component() {
	const read = _temp;
	return read();
}
function _temp() {
	function arguments() {
		return "first";
	}
	const arguments_0 = function arguments() {
		return "second";
	};
	return arguments_0();
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: []
};
