crates/oxc_react_compiler/tests/snapshots/valid-explicit-arguments-annex-b-captured-last-declaration.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/valid-explicit-arguments-annex-b-captured-last-declaration.js
---
const { c: _c } = require("react/compiler-runtime");
// @script
function Component() {
	const $ = _c(2);
	function arguments() {
		return "first";
	}
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		const arguments_0 = function arguments() {
			return "second";
		};
		t0 = () => arguments_0();
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	const read = t0;
	let t1;
	if ($[1] === Symbol.for("react.memo_cache_sentinel")) {
		t1 = <div>{read()}</div>;
		$[1] = t1;
	} else {
		t1 = $[1];
	}
	return t1;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: []
};
