crates/oxc_react_compiler/tests/snapshots/valid-explicit-arguments-annex-b-captured-read-after-reassignment.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/valid-explicit-arguments-annex-b-captured-read-after-reassignment.js
---
const { c: _c } = require("react/compiler-runtime");
// @script
function Component(replacement) {
	const $ = _c(4);
	function arguments() {
		return "first";
	}
	let t0;
	if ($[0] !== replacement) {
		function arguments_0() {
			return "second";
		}
		const read = () => arguments_0();
		arguments_0 = replacement;
		t0 = read();
		$[0] = replacement;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	let t1;
	if ($[2] !== t0) {
		t1 = <div>{t0}</div>;
		$[2] = t0;
		$[3] = t1;
	} else {
		t1 = $[3];
	}
	return t1;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [() => {
		return "replacement";
	}]
};
